--- a/module_eye_daily/src/main/res/layouts/activitys/layout/eye_daily_list_activity.xml
+++ b/module_eye_daily/src/main/res/layouts/activitys/layout/eye_daily_list_activity.xml
@@ -18,11 +18,13 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/include_eye_daily_toolbar"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintBottom_toBottomOf="parent"
+        >
 
         <com.scwang.smart.refresh.header.ClassicsHeader
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            />
 
             <com.yanzhenjie.recyclerview.SwipeRecyclerView
                 android:id="@+id/rv_daily_list"
