--- a/module_eye_video_detail/src/main/res/values/dimens.xml
+++ b/module_eye_video_detail/src/main/res/values/dimens.xml
@@ -14,4 +14,37 @@
     <dimen name="eye_video_detail_tv_collect_text_size">13sp</dimen>
     <dimen name="eye_video_detail_tv_comment_text_size">13sp</dimen>
     <dimen name="eye_video_detail_tv_share_text_size">13sp</dimen>
+    <dimen name="eye_video_detail_cl_category_padding_top">10dp</dimen>
+    <dimen name="eye_video_detail_cl_category_padding_bottom">10dp</dimen>
+    <dimen name="eye_video_detail_iv_author_width">40dp</dimen>
+    <dimen name="eye_video_detail_iv_author_height">40dp</dimen>
+    <dimen name="eye_video_detail_iv_author_margin_start">10dp</dimen>
+    <dimen name="eye_video_detail_category_tv_title_text_size">15sp</dimen>
+    <dimen name="eye_video_detail_category_tv_desc_margin_start">10dp</dimen>
+    <dimen name="eye_video_detail_category_tv_desc_margin_end">10dp</dimen>
+    <dimen name="eye_video_detail_category_tv_desc_text_size">13sp</dimen>
+    <dimen name="eye_video_detail_category_mb_follow_width">50dp</dimen>
+    <dimen name="eye_video_detail_category_mb_follow_height">30dp</dimen>
+    <dimen name="eye_video_detail_category_mb_follow_margin_end">10dp</dimen>
+    <dimen name="eye_video_detail_category_mb_follow_inset_top">0dp</dimen>
+    <dimen name="eye_video_detail_category_mb_follow_inset_bottom">0dp</dimen>
+    <dimen name="eye_video_detail_category_mb_follow_radius">5dp</dimen>
+    <dimen name="eye_video_detail_category_mb_follow_text_size">12sp</dimen>
+    <dimen name="eye_video_detail_category_line_margin_top">10dp</dimen>
+    <dimen name="eye_video_detail_relate_title_text_size">16sp</dimen>
+    <dimen name="eye_video_detail_relate_iv_cover_width">135dp</dimen>
+    <dimen name="eye_video_detail_relate_iv_cover_height">80dp</dimen>
+    <dimen name="eye_video_detail_relate_tv_time_width">38dp</dimen>
+    <dimen name="eye_video_detail_relate_tv_time_height">20dp</dimen>
+    <dimen name="eye_video_detail_relate_tv_time_margin_end">5dp</dimen>
+    <dimen name="eye_video_detail_relate_tv_time_margin_bottom">5dp</dimen>
+    <dimen name="eye_video_detail_relate_tv_time_text_size">10sp</dimen>
+    <dimen name="eye_video_detail_relate_tv_time_corner_radius">5dp</dimen>
+    <dimen name="eye_video_detail_relate_tv_category_margin_top">15dp</dimen>
+    <dimen name="eye_video_detail_relate_tv_category_margin_start">10dp</dimen>
+    <dimen name="eye_video_detail_relate_tv_category_text_size">12sp</dimen>
+    <dimen name="eye_video_detail_relate_cl_margin_start">10dp</dimen>
+    <dimen name="eye_video_detail_relate_cl_margin_bottom">15dp</dimen>
+    <dimen name="eye_video_detail_relate_tv_title_margin_left">10dp</dimen>
+    <dimen name="eye_video_detail_relate_tv_title_text_size">14sp</dimen>
 </resources>
