--- a/module_mine/src/main/res/drawable-night/mine_top_around.xml
+++ b/module_mine/src/main/res/drawable-night/mine_top_around.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <corners android:topLeftRadius="@dimen/dp_10" android:topRightRadius="@dimen/dp_10"/>
+    <corners android:topLeftRadius="@dimen/base_dimen_10" android:topRightRadius="@dimen/base_dimen_10"/>
     <solid android:color="#303030"/>
     <stroke android:width="0.5dp"
         android:color="#20000000"/>
