--- a/module_eye_discover/src/main/res/layouts/activitys/layout/eye_discover_activity.xml
+++ b/module_eye_discover/src/main/res/layouts/activitys/layout/eye_discover_activity.xml
@@ -5,15 +5,35 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
-    <com.yanzhenjie.recyclerview.SwipeRecyclerView
-        android:id="@+id/rv_daily_list"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintLeft_toLeftOf="parent"
+    <include
+        android:id="@+id/include_eye_discover_toolbar"
+        layout="@layout/base_include_toolbar"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
 
+
+    <com.scwang.smart.refresh.layout.SmartRefreshLayout
+        android:id="@+id/discover_list_refreshLayout"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/include_eye_discover_toolbar"
+        app:layout_constraintBottom_toBottomOf="parent"
+        >
+
+        <com.scwang.smart.refresh.header.ClassicsHeader
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            />
+
+        <com.yanzhenjie.recyclerview.SwipeRecyclerView
+            android:id="@+id/rv_discover_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+        <com.scwang.smart.refresh.footer.ClassicsFooter
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+    </com.scwang.smart.refresh.layout.SmartRefreshLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
