--- a/module_eye_discover/src/main/res/values/colors.xml
+++ b/module_eye_discover/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
       <color name="eye_discover_video_card_mb_time_background_tint">#8A000000</color>
       <color name="eye_discover_video_card_tv_desc_text_color">#9d9f9f</color>
       <color name="eye_discover_brief_follow_stroke">#363636</color>
+      <color name="eye_discover_list_footer_tv_text_color">#333333</color>
   </resources>
