完成发现模块之分类详细页面(30%)

--- a/module_eye_discover/src/main/res/layouts/adapters/layout/eye_discover_category_sub_item.xml
+++ b/module_eye_discover/src/main/res/layouts/adapters/layout/eye_discover_category_sub_item.xml
@@ -17,7 +17,8 @@
             android:id="@+id/iv_category_bg"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            imageUrl="@{viewModel.image}"
+            app:imageUrl="@{viewModel.image}"
+            android:transitionName="@string/eye_discover_share_element_container"
             app:shapeAppearance="@style/base_roundedCornerStyle"
             android:scaleType="fitXY"
             android:adjustViewBounds="true"
