--- a/module_eye_discover/src/main/res/layouts/activitys/layout/eye_discover_category_detail_activity.xml
+++ b/module_eye_discover/src/main/res/layouts/activitys/layout/eye_discover_category_detail_activity.xml
@@ -43,7 +43,7 @@
                     android:scaleType="fitXY"
                     app:layout_collapseMode="parallax"
                     app:layout_collapseParallaxMultiplier="0.7"
-                    app:url="@{headerImage}" />
+                    app:imageUrl="@{headerImage}" />
 
                 <androidx.appcompat.widget.Toolbar
                     android:id="@+id/discover_detail_mToolbar"
@@ -56,7 +56,7 @@
         </com.google.android.material.appbar.AppBarLayout>
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/discover_detail_rv"
+            android:id="@+id/discover_category_detail_rv"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior" />
