--- a/module_eye_discover/src/main/res/layouts/activitys/layout/eye_discover_category_detail_activity.xml
+++ b/module_eye_discover/src/main/res/layouts/activitys/layout/eye_discover_category_detail_activity.xml
@@ -50,6 +50,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="?attr/actionBarSize"
                     app:layout_collapseMode="pin"
+                    app:navigationIcon="@drawable/base_iv_left_arrow"
                     app:title="@{title}" />
 
             </com.google.android.material.appbar.CollapsingToolbarLayout>
