--- a/module_eye_discover/src/main/res/layouts/adapters/layout/eye_discover_category_detail_item.xml
+++ b/module_eye_discover/src/main/res/layouts/adapters/layout/eye_discover_category_detail_item.xml
@@ -15,9 +15,7 @@
         xmlns:bind="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/eye_discover_detail_item_cl_margin_left"
         android:layout_marginTop="@dimen/eye_discover_detail_item_cl_margin_top"
-        android:layout_marginRight="@dimen/eye_discover_detail_item_cl_margin_right"
         android:layout_marginBottom="@dimen/eye_discover_detail_item_cl_margin_bottom"
         android:orientation="vertical">
 
@@ -28,46 +26,42 @@
             android:scaleType="centerCrop"
             android:transitionName="@string/eye_discover_share_element_container"
             app:layout_constraintTop_toTopOf="parent"
-            app:shapeAppearance="@style/base_roundedCornerStyle"
-            bind:url="@{model.data.component9().feed}" />
+            bind:imageUrl="@{viewModel.data.component9().feed}" />
 
-        <com.google.android.material.button.MaterialButton
-            style="@style/Widget.MaterialComponents.Button.TextButton"
-            android:layout_width="@dimen/eye_discover_detail_item_mb_category_width"
-            android:layout_height="@dimen/eye_discover_detail_item_mb_category_height"
-            android:layout_marginStart="@dimen/eye_discover_detail_item_mb_category_margin_start"
-            android:layout_marginTop="@dimen/eye_discover_detail_item_mb_category_margin_top"
-            android:text="@{model.data.category}"
+
+        <TextView
+            android:id="@+id/tv_daily_banner_category"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/eye_discover_category_item_type_icon"
+            android:gravity="center"
+            android:paddingRight="@dimen/eye_discover_detail_item_tv_category_padding_right"
+            android:paddingBottom="@dimen/eye_discover_detail_item_tv_category_padding_bottom"
+            android:paddingStart="@dimen/eye_discover_detail_item_tv_category_padding_start"
+            android:shadowColor="@android:color/black"
+            android:shadowDx="2"
+            android:shadowDy="2"
+            android:shadowRadius="1"
             android:textColor="@android:color/white"
-            android:textSize="@dimen/eye_discover_detail_item_mb_category_text_size"
-            app:backgroundTint="@color/eye_discover_item_detail_mb_category_color"
-            app:cornerRadius="@dimen/eye_discover_detail_item_mb_category_radius"
+            android:textStyle="bold"
+            android:text="@{viewModel.data.category}"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <com.google.android.material.button.MaterialButton
-            style="@style/Widget.MaterialComponents.Button.TextButton"
-            android:layout_width="@dimen/eye_discover_detail_item_mb_video_time_width"
-            android:layout_height="@dimen/eye_discover_detail_item_mb_video_time_height"
-            android:layout_marginEnd="@dimen/eye_discover_detail_item_mb_video_time_margin_end"
-            android:layout_marginBottom="@dimen/eye_discover_detail_item_mb_video_time_margin_bottom"
-            android:text="@{DateUtils.INSTANCE.formatDateMsByMS(model.data.duration * 1000)}"
-            android:textColor="@android:color/white"
-            android:textSize="@dimen/eye_discover_detail_item_mb_video_time_text_size"
-            app:backgroundTint="@color/eye_discover_item_detail_mb_video_time_color"
-            app:cornerRadius="@dimen/eye_discover_detail_item_mb_video_time_corner_radius"
-            app:layout_constraintBottom_toTopOf="@id/iv_author"
-            app:layout_constraintRight_toRightOf="parent" />
+
+
+
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/iv_author"
             android:layout_width="@dimen/eye_discover_detail_item_iv_author_width"
             android:layout_height="@dimen/eye_discover_detail_item_iv_author_height"
             android:layout_marginTop="@dimen/eye_discover_detail_item_iv_author_margin_top"
+            android:layout_marginStart="@dimen/eye_discover_detail_item_iv_author_margin_start"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@id/iv_cover"
             app:shapeAppearance="@style/base_circleStyle"
-            app:url="@{model.data.author == null ? model.data.tags[0].headerImage : model.data.author.icon}" />
+            app:imageUrl="@{viewModel.data.author == null ? viewModel.data.tags[0].headerImage : viewModel.data.author.icon}" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tv_title"
@@ -77,23 +71,39 @@
             android:layout_marginTop="@dimen/eye_discover_detail_item_tv_title_margin_start"
             android:ellipsize="end"
             android:maxLines="1"
-            android:text="@{model.data.title}"
-            android:textColor="@android:color/black"
+            android:text="@{viewModel.data.title}"
+            android:textColor="@color/eye_discover_item_detail_tv_title_text_color"
             android:textSize="@dimen/eye_discover_detail_item_tv_title_text_size"
             android:textStyle="bold"
             app:layout_constraintLeft_toRightOf="@id/iv_author"
             app:layout_constraintTop_toBottomOf="@id/iv_cover" />
 
         <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tv_desc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/eye_discover_detail_item_tv_author_margin_start"
             android:layout_marginTop="@dimen/eye_discover_detail_item_tv_author_margin_top"
-            android:text="@{model.data.author == null ? model.data.tags[0].name : model.data.author.name}"
+            android:text="@{viewModel.data.author == null ? viewModel.data.tags[0].name : viewModel.data.author.name}"
             android:textColor="@color/eye_discover_item_detail_tv_author_color"
             android:textSize="@dimen/eye_discover_detail_item_tv_author_text_size"
             app:layout_constraintLeft_toRightOf="@id/iv_author"
             app:layout_constraintTop_toBottomOf="@id/tv_title" />
+
+
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tv_video_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@{DateUtils.INSTANCE.formatDateMsByMS(viewModel.data.duration * 1000)}"
+            app:layout_constraintTop_toTopOf="@id/tv_desc"
+            app:layout_constraintStart_toEndOf="@id/tv_desc"
+            android:textColor="@color/eye_discover_item_detail_tv_video_time_text_color"
+            android:drawableLeft="@drawable/eye_discover_category_play_icon"
+            android:drawablePadding="@dimen/eye_discover_detail_item_tv_video_time_drawable_padding"
+            android:layout_marginStart="@dimen/eye_discover_detail_item_tv_video_time_margin_start"
+            />
 
         <ImageView
             android:id="@+id/tv_share"
@@ -102,7 +112,8 @@
             android:background="@drawable/eye_discover_share_icon"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/iv_cover" />
+            app:layout_constraintTop_toBottomOf="@id/iv_cover"
+            android:layout_marginEnd="@dimen/eye_discover_detail_item_tv_share_margin_end"/>
 
 <!--        <View-->
 <!--            android:layout_width="match_parent"-->
