--- a/module_eye_video_detail/src/main/res/layouts/items/layout/eye_video_detail_head.xml
+++ b/module_eye_video_detail/src/main/res/layouts/items/layout/eye_video_detail_head.xml
@@ -55,7 +55,9 @@
                 android:text="@{videoEntity.description}"
                 app:contentTextColor="@android:color/white"
                 app:contentTextSize="@dimen/eye_video_detail_tv_desc_text_size"
-                app:maxCollapsedLines="3" />
+                app:maxCollapsedLines="3"
+                app:DrawableAndTextGravity="right"
+                app:expandCollapseTextColor="@android:color/white"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
