--- a/library_widget/src/main/res/values/attrs.xml
+++ b/library_widget/src/main/res/values/attrs.xml
@@ -99,26 +99,27 @@
         <attr name="stroke_width" format="dimension|reference"/>
     </declare-styleable>
 
-
     <declare-styleable name="ExpandableTextView">
-        <attr name="maxCollapsedLines" format="integer" />
-        <attr name="animDuration" format="integer" />
-        <attr name="contentTextSize" format="dimension" />
-        <attr name="contentTextColor" format="color" />
-        <attr name="contentLineSpacingMultiplier" format="float" />
-        <attr name="expandDrawable" format="reference" />
-        <attr name="expandText" format="string" />
-        <attr name="collapseDrawable" format="reference" />
-        <attr name="collapseText" format="string" />
-        <attr name="expandCollapseTextColor" format="color" />
-        <attr name="expandCollapseTextGravity" format="enum">
-            <enum name="left" value="0" />
-            <enum name="center" value="1" />
-            <enum name="right" value="2" />
-        </attr>
-        <attr name="expandCollapseTextVisible" format="enum">
-            <enum name="gone" value="0" />
-            <enum name="invisible" value="1" />
+        <attr name="maxCollapsedLines" format="integer"/>
+        <attr name="animDuration" format="integer"/>
+        <attr name="contentTextSize" format="dimension"/>
+        <attr name="contentTextColor" format="color"/>
+        <attr name="contentLineSpacingMultiplier" format="float"/>
+        <attr name="expandDrawable" format="reference"/>
+        <attr name="expandText" format="string"/>
+        <attr name="collapseDrawable" format="reference"/>
+        <attr name="collapseText" format="string"/>
+        <attr name="expandCollapseTextColor" format="color"/>
+        <attr name="DrawableAndTextGravity">
+            <enum name="left" value="0"/>
+            <enum name="center" value="1"/>
+            <enum name="right" value="2"/>
         </attr>
     </declare-styleable>
+
+    <declare-styleable name="SlowTextView">
+        <attr name="openSlow" format="boolean" />
+
+    </declare-styleable>
+
 </resources>
