--- a/module_eye_discover/src/main/res/values/colors.xml
+++ b/module_eye_discover/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
       <color name="eye_discover_item_detail_tv_author_color">#9a9a9a</color>
       <color name="eye_discover_item_detail_tv_video_time_text_color">#333333</color>
       <color name="eye_discover_item_detail_tv_title_text_color">#333333</color>
+      <color name="eye_discover_special_topic_header_title_text_color">#9a9a9a</color>
+      <color name="eye_discover_special_topic_header_desc_stroke_color">#FFF5F5F5</color>
   </resources>
