--- a/module_eye_discover/src/main/res/layouts/activitys/layout/eye_discover_special_topic_activity.xml
+++ b/module_eye_discover/src/main/res/layouts/activitys/layout/eye_discover_special_topic_activity.xml
@@ -14,12 +14,21 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <com.knight.kotlin.library_widget.CompatToolBar
+<!--        <com.knight.kotlin.library_widget.CompatToolBar-->
+<!--            android:id="@+id/special_topic_detail_toolbar"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:background="@android:color/white"-->
+<!--            app:title="@{title}" />-->
+
+
+        <include
             android:id="@+id/special_topic_detail_toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@android:color/white"
-            app:title="@{title}" />
+            layout="@layout/base_include_toolbar"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:title="@{title}"/>
 
 
         <com.scwang.smart.refresh.layout.SmartRefreshLayout
