--- a/module_eye_discover/src/main/res/values/colors.xml
+++ b/module_eye_discover/src/main/res/values/colors.xml
@@ -11,9 +11,9 @@
       <color name="eye_discover_special_topic_header_desc_stroke_color">#FFF5F5F5</color>
       <color name="eye_discover_special_topic_tv_publish_time_text_color">#9a9a9a</color>
       <color name="eye_discover_special_topic_tv_des_text_color">#333333</color>
-      <color name="eye_discover_special_topic_tv_like_text_color">#dbdbdb</color>
-      <color name="eye_discover_special_topic_tv_comment_text_color">#dbdbdb</color>
-      <color name="eye_discover_special_topic_tv_collect_text_color">#dbdbdb</color>
-      <color name="eye_discover_special_topic_tv_share_text_color">#dbdbdb</color>
+      <color name="eye_discover_special_topic_tv_like_text_color">#bfbfbf</color>
+      <color name="eye_discover_special_topic_tv_comment_text_color">#bfbfbf</color>
+      <color name="eye_discover_special_topic_tv_collect_text_color">#bfbfbf</color>
+      <color name="eye_discover_special_topic_tv_share_text_color">#bfbfbf</color>
       <color name="eye_discover_special_tag_background_tint">#3389b1e9</color>
   </resources>
